# panama-playground

./: .editorconfig  .gitignore  README.md  build.gradle.kts  settings.gradle.kts
docs/: getting-started.md  index.md
docs/migration/: jep-424-to-java-22.md  jep-424-to-java-25.md
docs/reference/: cheatsheet.md  troubleshooting.md
docs/tutorials/: 01-memory-segments.md  02-arenas-and-lifetimes.md  03-layouts-varhandles-and-structs.md  04-downcalls-and-symbol-lookups.md  05-strings-arrays-and-allocators.md  06-upcalls-and-callbacks.md  07-confinement-sharing-and-safety.md  08-file-backed-segments.md  09-jmh-and-performance.md  index.md
ffm-benchmarks/: build.gradle.kts
ffm-benchmarks/src/jmh/java/net/szumigaj/java/panama/ffm/bench/: AllocationBenchmark.java  DowncallBenchmark.java  MemoryCopyBenchmark.java  MemoryReadBenchmark.java  QSortUpcallBenchmark.java  StructAccessBenchmark.java
ffm-examples/: build.gradle.kts
ffm-examples/src/integrationTest/java/net/szumigaj/java/panama/ffm/tutorial/downcalls/: ScalarDowncallsIT.java
ffm-examples/src/integrationTest/java/net/szumigaj/java/panama/ffm/tutorial/file/: FileBackedSegmentExampleIT.java
ffm-examples/src/main/java/net/szumigaj/java/panama/ffm/support/: FfmExceptionHelper.java  NativeLib.java
gradle/: libs.versions.toml
native/: CMakeLists.txt  README.md
native/include/ffmplayground/: callbacks.h  perf.h  scalars.h  strings.h  structs.h
native/scripts/: build-macos.sh  build-windows.ps1
native/src/: callbacks.c  perf.c  scalars.c  strings.c  structs.c
(+16 files in other folders)
